--- a/chempakam clone/main.html
+++ b/chempakam clone/main.html
@@ -15,21 +15,27 @@
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <p>WELCOME TO CHEMPAKAM COLLECTION ESPECIALLY FOR WOMEN</p>
+                    <p class="tt"><b>WELCOME TO CHEMPAKAM COLLECTION ESPECIALLY FOR WOMEN</b></p>
                 </div>
                 <div class="carousel-item">
-                    <p>CONTACT US: FOR ANY PAYMENT ISSUES</p>
+                    <p class="tt"><b>CONTACT US: FOR ANY PAYMENT ISSUES</b></p>
                 </div>
                 <div class="carousel-item">
-                    <p>CONTACT US: FOR DELIVERY OUTSIDE INDIA</p>
+                    <p class="tt"><b>CONTACT US: FOR DELIVERY OUTSIDE INDIA</b></p>
                 </div>
                 <div class="carousel-item">
-                    <p>CONTACT US: FOR CUSTOMIZED STITCHING</p>
+                    <p class="tt"><b>CONTACT US: FOR CUSTOMIZED STITCHING</b></p>
                 </div>
             </div>
         </div>
 
     </div>
+    <div class="main1">
+        <div class="logo">
+            <img src="images/logo.png" alt="logo">
+        </div>
+    </div>
+
 
 
 
