--- a/chempakam clone/main.html
+++ b/chempakam clone/main.html
@@ -34,6 +34,20 @@
         <div class="logo">
             <img src="images/logo.png" alt="logo">
         </div>
+        <div class="drop">
+            <div class="dropdown">
+                <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    SHOP NOW
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                    <li><a class="dropdown-item" href="#">ALL</a></li>
+                    <li><a class="dropdown-item" href="#">SALWAR(UNSTITCHED)</a></li>
+                    <li><a class="dropdown-item" href="#">SAREES</a></li>
+                    <li><a class="dropdown-item" href="#">DISCOUNT SALE</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
 
 
