--- a/chempakam clone/main.html
+++ b/chempakam clone/main.html
@@ -35,7 +35,7 @@
             <img src="images/logo.png" alt="logo">
         </div>
         <div class="drop">
-            <div class="dropdown">
+            <div class="dropdown ">
                 <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"
                     aria-expanded="false">
                     SHOP NOW
@@ -48,7 +48,37 @@
                 </ul>
             </div>
         </div>
+        <div class="list">
+            <ul style="list-style-type: none;">
+                <li>REVIEWS</li>
+                <li>ABOUT US</li>
+                <li>CONTACT US</li>
+            </ul>
+        </div>
+        <div class="search">
+            <form class="search-form">
+                <div class="input-group">
+                    <input type="search" class="search-input w-100"
+                        placeholder ="Product Code"
+                        aria-label="Product Code">
+                    <span class="input-group-search">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" 
+                            class="bi bi-search" viewBox="0 0 16 16">
+                            <path
+                                d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
+                        </svg>
+                    </span>
+                </div>
+            </form>
+        </div>
+        <form>
+            <a href="#" class="me-2"><i class="fab fa-facebook fa-lg text-light"></i></a>
+            <a href="#" class="me-2"><i class="fab fa-instagram fa-lg text-light"></i></a>
+            <a href="#" class="me-2"><i class="fas fa-heart fa-lg text-light"></i></a>
+            <a href="#"><i class="fas fa-shopping-bag fa-lg text-light"></i></a>
+        </form>
     </div>
+ 
 
 
 
