--- a/the odin project/index.html
+++ b/the odin project/index.html
@@ -226,7 +226,8 @@
     </div>
     <div class="gg d-flex justify-center text-center">
         <p class="kk1 mt-5 p-1 border border-secondary rounded-3 text-center" style="width:200px"> Learn More</p>
-        <p class="kk2 ms-3 mt-5 p-1 border border-success bg-success text-light rounded-3 text-center" style="width:200px">Donate Now <i class="bi bi-arrow-right"></i></p>
+        <p class="kk2 ms-3 mt-5 p-1 border border-success bg-success text-light rounded-3 text-center"
+            style="width:200px">Donate Now <i class="bi bi-arrow-right"></i></p>
     </div>
 
 
@@ -234,17 +235,17 @@
         <div class="row">
             <div class="col4">
                 <div class="d-flex">
-                <img src="images/odin.png" alt="odin.png" height="40px" width="60px" class=" mt-1">
-                <div class="hh1 fs-6 text-dark">
-                    <h5>THE ODIN PROJECT</h5>
-                </div>
+                    <img src="images/odin.png" alt="odin.png" height="40px" width="60px" class=" mt-1">
+                    <div class="hh1 fs-6 text-dark">
+                        <h5>THE ODIN PROJECT</h5>
+                    </div>
                 </div>
                 <p>High quality coding education maintained by an open source community.</p>
                 <div class="d-flex">
-                <i class="bi bi-github" style="width:60px;"></i>
-                <i class="bi bi-discord" style="width:60px;"></i>
-                <i class="bi bi-facebook" style="width:60px;"></i>
-                <i class="bi bi-twitter" style="width:60px;"></i>
+                    <i class="bi bi-github" style="width:60px;"></i>
+                    <i class="bi bi-discord" style="width:60px;"></i>
+                    <i class="bi bi-facebook" style="width:60px;"></i>
+                    <i class="bi bi-twitter" style="width:60px;"></i>
                 </div>
             </div>
         </div>
@@ -300,7 +301,7 @@
     </div>
 
 
-    </div>
+
 
 
 
